[build-system]
requires = [ "setuptools", "setuptools-scm[toml]" ]

[project]
name = "hailoyolo"
dynamic = ["version"]
dependencies = [ "loguru",
                 "opencv-python",
                 "numpy<2.0",
                 "scipy",
                 "lap",
                 "cython_bbox",
                 "picamera2" ]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
